[package]
name = "auth_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
ic-cdk-macros = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
rsa = "0.9.2"
rand = "0.8.5"
base64 = "0.21.2"
bip39 = "2.0.0"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []